# coveragepy-lcov

./: .gitignore  README.md  pyproject.toml
.github/workflows/: release.yml
coveragepy_lcov/: cli.py  converter.py
tests/: test_coveragepy_lcov.py
